force-app/main/default/objects/Competency__c/Competency__c.object-meta.xml
<CustomObject>
    <label>Competency</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Competency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>