force-app/main/default/objects/Competency__c/fields/CEU__c.field-meta.xml
<CustomField>
    <fullName>CEU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CEU</label>
    <referenceTo>Professional_Development__c</referenceTo>
    <relationshipLabel>Competencies</relationshipLabel>
    <relationshipName>CEU_Competencies</relationshipName>
    <type>Lookup</type>
</CustomField>