force-app/main/default/objects/Competency__c/fields/Competency_Core_Function__c.field-meta.xml
<CustomField>
    <fullName>Competency_Core_Function__c</fullName>
    <label>Competency Core Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competency_Category</valueSetName>
    </valueSet>
</CustomField>