force-app/main/default/objects/Competency__c/fields/Competency_Element__c.field-meta.xml
<CustomField>
    <fullName>Competency_Element__c</fullName>
    <label>Competency Element</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competencies</valueSetName>
    </valueSet>
</CustomField>