force-app/main/default/objects/Competency__c/fields/Competency_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Competency_Template_Id__c</fullName>
    <label>Competency Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>