force-app/main/default/objects/Competency__c/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <formula>CEU__r.Registration__r.NSCP_Registration_Number1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Number</label>
    <type>Text</type>
</CustomField>